# Awesome-Citations

./: .gitignore  README.md  pyproject.toml  requirements.txt  utilities.py
awesome_citations/: __init__.py  cli.py
awesome_citations/data/: journal_abbr.json
awesome_citations/scripts/: __init__.py  enhanced_complete.py  format_bibtex.py  generate_pdf.py  utilities.py  workflow_complete.py
awesome_citations/utils/: __init__.py  change_logger.py  multi_source_merger.py  title_formatter.py
data/: chinese_journals.json  protected_words.json  small_words.json
docs/: CLAUDE.md  COMPLETION_SUMMARY.md  FILE_REORGANIZATION_PLAN.md  FILE_REORGANIZATION_SUMMARY.md  IEEE_FAILURE_ANALYSIS.md  IEEE失败原因说明.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_SUMMARY.md  REAL_RUN_TEST_SUMMARY.md  TESTING_COMPLETE.md  TEST_REPORT.md  TEST_SUMMARY.md  USAGE_GUIDE.md  WORKFLOW_GUIDE.md  WORKFLOW_IMPLEMENTATION_SUMMARY.md
examples/: README.md  sample_config.json  sample_input.bib  sample_input_completed_changes.md
research/: ieee_api_research.py
scripts/: analyze_bibtex.py  complete_bibtex.py  enhanced_complete.py  format_bibtex.py  sort_bibtex.py  utilities.py  workflow_complete.py
tests/: README.md  conftest.py  pytest.ini  test_complete_bibtex.py  test_format_bibtex.py  test_ieee_integration.py  test_integration.py  test_utils.py
utils/: arxiv_detector.py
